# ChipBenchmarker

./: .pre-commit-config.yaml  CMakeLists.txt  CMakelists.txt  README.md  build.sh
AMD/GFX1100/: l1cache_latency.hip  l2cache_latency.hip  ldg_stg_inst.h  smem_bandwidth.hip  smem_latency.hip
AMD/GFX90/: dram_bandwidth.hip  dram_latency.hip  l1cache_latency.hip  l2cache_bandwidth.hip  l2cache_latency.hip  ldg_stg_inst.h  smem_bandwidth.hip  smem_latency.hip
CUDA/: dram_bandwidth.cu  dram_latency.cu  l1cache_latency.cu  l2cache_bandwidth.cu  l2cache_latency.cu  smem_bandwidth.cu  smem_latency.cu
MI210/: Makefile  demo  dram_bandwidth.cpp  l1cache_latency.cpp  l2cache_latency.cpp
MUXI/XCORE1000/: dram_bandwidth.cu
RX7900/: dram_bandwidth.hip  dram_latency.hip  l1cache_latency.hip  l2cache_bandwidth.hip  l2cache_latency.hip  ldg_stg_inst.h
src/: Makefile  amd_dram_bandwidth.cpp  amd_l2cache_bandwidth.cpp
src/amd/: Makefile  build.sh  dram_bandwidth.cpp  l2cache_bandwidth.cpp  l2cache_latency.cpp  ldg_stg_inst.h  load_store_128.h  timer.h
